Fix info to center hero-wrap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,7 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background-color: #e6f0ff;
   min-height: calc(100vh - 90px);
 }
@@ -110,22 +111,18 @@ a {
   border-radius: 8px;
 }
 
-.hero {
-  margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
   width: 50.36%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
   color: #687690;
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.01em;
 }
 
-.hero .title {
+.hero-wrap .title {
   margin-top: 8px;
   color: #000336;
   font-size: 6.3rem;
@@ -133,7 +130,7 @@ a {
   line-height: 1.19;
 }
 
-.hero .desc {
+.hero-wrap .desc {
   margin-top: 30px;
   color: #5a6473;
   font-size: 1.8rem;
